--- a/Assignment2/contact-us.html
+++ b/Assignment2/contact-us.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/JavaScript" src="travel.js"></script>
     </head>
-    <body>
+    <body id="contact-us">
         <div class="header">
         <h1>Contact-Us</h1>
     </div>
@@ -24,6 +24,22 @@
     <div class="row">
         <div class="column side">
             <h2>Left Side</h2>
+            <p class="prefselector">Choose background color: </p>
+            <select id="colorpicker" onchange="colorChange()">
+                <option value="white" selected="true">White</option>
+                <option value="darkblue">Blue</option>
+                <option value="yellow">Yellow</option>
+            </select>
+            <br>
+            <p class="prefselector">Choose font size: </p>
+            <select id="sizepicker" onchange="fontChange()">
+                <option value="10px">18</option>
+                <option value="12px" >12</option>
+                <option value="16px" selected="true">16</option>
+                <option value="20px">20</option>
+                <option value="24px">24</option>
+            </select>
+            <br>
         </div>
         <div class="column middle">
             <h2>Main content</h2>
