--- a/Assignment2/cars.html
+++ b/Assignment2/cars.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Cars</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="mystyle.css">
         <script type="text/JavaScript" src="travel.js"></script>
     </head>
     <body id="cars">
