--- a/Assignment2/cars.html
+++ b/Assignment2/cars.html
@@ -42,7 +42,19 @@
             <br>
         </div>
         <div class="column middle">
-            <h2>Main content</h2>
+            <h2>Search for Cars</h2>
+            <form>
+                City:<br>
+                <input id="city" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="city"><br>
+                Type of Car:<br>
+                <input id="carType" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="carType"><br>
+                Check in Date:<br>
+                <input id="checkIn" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="checkIn"><br>
+                Check out Date:<br>
+                <input id="checkOut" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="checkOut"><br><br>
+                <button type="button" onclick="validateInfoCar()">Submit</button>
+            </form>
+            <p id="carInfo"></p>
         </div>
     </div>
 
