Add validation car form

--- a/Assignment2/cars.html
+++ b/Assignment2/cars.html
@@ -49,10 +49,10 @@
                 Type of Car:<br>
                 <input id="carType" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="carType"><br>
                 Check in Date:<br>
-                <input id="checkIn" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="checkIn"><br>
+                <input id="checkIn" type="date" onfocus="myFocus(this)" onblur="myBlur(this)" name="checkIn"><br>
                 Check out Date:<br>
-                <input id="checkOut" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="checkOut"><br><br>
-                <button type="button" onclick="validateInfoCar()">Submit</button>
+                <input id="checkOut" type="date" onfocus="myFocus(this)" onblur="myBlur(this)" name="checkOut"><br><br>
+                <button type="button" onclick="validateInfoCars()">Submit</button>
             </form>
             <p id="carInfo"></p>
         </div>
