--- a/Assignment2/stays.html
+++ b/Assignment2/stays.html
@@ -27,8 +27,8 @@
             <p class="prefselector">Choose background color: </p>
             <select id="colorpicker" onchange="colorChange()">
                 <option value="white" selected="true">White</option>
-                <option value="darkblue">Blue</option>
-                <option value="yellow">Yellow</option>
+                <option value="lightgray">Light Gray</option>
+                <option value="darkgray">Dark Gray</option>
             </select>
             <br>
             <p class="prefselector">Choose font size: </p>
@@ -89,4 +89,5 @@
 
     </body>
 </html>
+
 
