--- a/Assignment2/cruises.html
+++ b/Assignment2/cruises.html
@@ -63,21 +63,26 @@
                 </div> <br>
 
                 <div class="guests">
-                    <label for="guests">Guests:</label>
+                    <label for="guests">Number of Guests:</label>
                     <div class="group-container">
                         <div class="group">
                             <label for="adults">Adults</label>
-                            <input type="number" id="adults" name="adults" >
+                            <input type="number" id="adults" name="adults" min="0">
                         </div>
                         <div class="group">
                             <label for="children">Children</label>
-                            <input type="number" id="children" name="children" >
+                            <input type="number" id="children" name="children" min="0">
                         </div>
                         <div class="group">
                             <label for="infants">Infants</label>
                             <input type="number" id="infants" name="infants" min="0">
                         </div>  
                     </div>
+                </div>
+
+                <div class="rooms">
+                    <label for="rooms">Number of Rooms:</label>
+                    <input type="number" id="rooms" name="rooms" min="0">
                 </div>
 
                 <br>
