Edit file structure and edit the file path where needed

--- a/Assignment2/stays.html
+++ b/Assignment2/stays.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Stays</title>
-        <link rel="stylesheet" type="text/css" href="mystyle.css">
-        <script type="text/JavaScript" src="travel.js"></script>
+        <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
+        <script type="text/javascript" src="assets/js/travel.js"></script>
     </head>
     <body id="stays">
         <div class="header">
