--- a/Assignment2/cruises.html
+++ b/Assignment2/cruises.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Cruises</title>
-        <link rel="stylesheet" type="text/css" href="mystyle.css">
-        <script type="text/JavaScript" src="travel.js"></script>
-        <script src="jquery-3.7.1.js"></script>
+        <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
+        <script type="text/javascript" src="assets/js/travel.js"></script>
+        <script src="assets/js/jquery-3.7.1.js"></script>
     </head>
     <body id="cruises">
         <div class="header">
@@ -99,6 +99,6 @@
             <h3 id="Names">Nicholas Aminzadeh, NHA190001 | Changhui Sun, CXS240024 | Thi Vu, TAV180002</h3>
         </div>
     </div>
-    <script type="text/JavaScript" src="cruses.js"></script>
+    <script type="text/JavaScript" src="assets/js/cruises.js"></script>
     </body>
 </html>
