Add save contact-us submission (currently doesn't work)

--- a/Assignment2/contact-us.html
+++ b/Assignment2/contact-us.html
@@ -43,7 +43,7 @@
         </div>
         <div class="column middle">
             <h2>Contact Form</h2>
-            <form>
+            <form id="contact-usForm">
                 First name:<br>
                 <input id="firstname" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="firstname"><br>
                 Last name:<br>
