--- a/Assignment2/home.html
+++ b/Assignment2/home.html
@@ -18,6 +18,7 @@
             <a href="cars.html">Cars</a>
             <a href="cruises.html">Cruises</a>
             <a href="contact-us.html">Contact us</a>
+            <a href="cart.html">Cart</a>
         </div>
     </div>
 
