--- a/Assignment2/stays.html
+++ b/Assignment2/stays.html
@@ -18,6 +18,7 @@
             <a href="cars.html">Cars</a>
             <a href="cruises.html">Cruises</a>
             <a href="contact-us.html">Contact us</a>
+            <a href="cart.html">Cart</a>
         </div>
     </div>
 
@@ -63,7 +64,7 @@
                     <label for="infants">Number of Infants:</label>
                     <input type="text" id="infants" name="infants" value="0" required>
                     <br><br>
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Search">
                 </form>
             </div>
             <div class="column right">
