Tweaks to stays.html and hotels.xml

--- a/Assignment2/stays.html
+++ b/Assignment2/stays.html
@@ -4,6 +4,7 @@
         <title>Stays</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
         <script type="text/JavaScript" src="travel.js"></script>
+        <script src="jquery-3.7.1.js"></script>
     </head>
     <body id="stays">
         <div class="header">
