--- a/Assignment2/cart.html
+++ b/Assignment2/cart.html
@@ -4,6 +4,7 @@
         <title>Cart</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
         <script type="text/JavaScript" src="cart.js"></script>
+        <script src="jquery-3.7.1.js"></script>
     </head>
     <body id="cart">
         <div class="header">
