--- a/Assignment2/stays.html
+++ b/Assignment2/stays.html
@@ -44,7 +44,7 @@
             <br>
         </div>
         <div class="column middle">
-            <div class="column left">
+            <div class="column next">
                 <h2>Main content 1</h2>
                 <form id="staysform">
                     <label for="city">City Name:</label>
@@ -68,7 +68,7 @@
                     <input type="submit" value="Search">
                 </form>
             </div>
-            <div class="column right">
+            <div class="column next">
                 <h2>Main Content 2</h2>
                 <p id="validationresult">
                     City Name: <br>
@@ -79,6 +79,10 @@
                     Number of Infants: <br>
                     Number of Rooms: <br>
                 </p>
+            </div>
+            <div class="column next">
+                <h2>Main Content 3</h2>
+                <button type="button" onclick="bookStays()">Book</button>
             </div>
         </div>
     </div>
