Cart start (layout + hotel)

--- a/Assignment2/cart.html
+++ b/Assignment2/cart.html
@@ -44,13 +44,19 @@
             <br>
         </div>
         <div class="column middle">
-            <div class="column left">
+            <div class="column next">
                 <h2>Selected Flight:</h3>
                 <p id="flightinfo"></p>
-            </div>
-            <div class="column right">
-                <h2>Passenger Information</h3>
+                <h2>Passenger Information:</h3>
                 <p id="passinfo"></p>
+            </div>
+            <div class ="column next">
+                <h2>Selected Car:</h2>
+                <p id="carinfo"></p>
+            </div>
+            <div class="column next">
+                <h2>Selected Hotel:</h2>
+                <p id="hotelinfo"></p>
         </div>
     </div>
 
