Update flights information

--- a/Assignment2/cart.html
+++ b/Assignment2/cart.html
@@ -45,8 +45,13 @@
         </div>
         <div class="column middle">
             <div class="column left">
-                <h2>Selected Flight:</h3>
+                <h2>My Cart:</h2>
+                <h4>Flights in cart:</h4>
                 <p id="flightinfo"></p>
+                <p id="passinfo"></p>
+                <p id="totalpriceinfo"></p>
+                
+                
             </div>
             <div class="column right">
                 <h2>Passenger Information</h3>
