Edit the file structure and corrected the path for hotel and user path. Also, corrected path for css and js.

--- a/Assignment2/cart.html
+++ b/Assignment2/cart.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Cart</title>
-        <link rel="stylesheet" type="text/css" href="mystyle.css">
-        <script type="text/JavaScript" src="cart.js"></script>
-        <script src="jquery-3.7.1.js"></script>
+        <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
+        <script type="text/JavaScript" src="assets/js/cart.js"></script>
+        <script src="assets/js/jquery-3.7.1.js"></script>
     </head>
     <body id="cart">
         <div class="header">
