--- a/Assignment2/stays.html
+++ b/Assignment2/stays.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Stays</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
-        <script type="text/javascript" src="assets/js/travel.js"></script>
-    </head>
-    <body id="stays">
-        <div class="header">
+<head>
+    <title>Stays</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
+    <script type="text/javascript" src="assets/js/travel.js"></script>
+    <script src="assets/js/jquery-3.7.1.js"></script>
+    
+</head>
+<body id="stays">
+    <div class="header">
         <h1>Stays</h1>
     </div>
 
@@ -18,6 +20,7 @@
             <a href="cars.html">Cars</a>
             <a href="cruises.html">Cruises</a>
             <a href="contact-us.html">Contact us</a>
+            <a href="cart.html">Cart</a>
         </div>
     </div>
 
@@ -26,23 +29,24 @@
             <h2>Left Side</h2>
             <p class="prefselector">Choose background color: </p>
             <select id="colorpicker" onchange="colorChange()">
-                <option value="white" selected="true">White</option>
+                <option value="white" selected>White</option>
                 <option value="lightgray">Light Gray</option>
                 <option value="darkgray">Dark Gray</option>
             </select>
             <br>
             <p class="prefselector">Choose font size: </p>
             <select id="sizepicker" onchange="fontChange()">
-                <option value="12px" >12</option>
-                <option value="16px" selected="true">16</option>
+                <option value="12px">12</option>
+                <option value="16px" selected>16</option>
                 <option value="18px">18</option>
                 <option value="20px">20</option>
                 <option value="24px">24</option>
             </select>
             <br>
         </div>
+
         <div class="column middle">
-            <div class="column left">
+            <div class="column next">
                 <h2>Main content 1</h2>
                 <form id="staysform">
                     <label for="city">City Name:</label>
@@ -63,10 +67,11 @@
                     <label for="infants">Number of Infants:</label>
                     <input type="text" id="infants" name="infants" value="0" required>
                     <br><br>
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Search">
                 </form>
             </div>
-            <div class="column right">
+
+            <div class="column next">
                 <h2>Main Content 2</h2>
                 <p id="validationresult">
                     City Name: <br>
@@ -78,6 +83,12 @@
                     Number of Rooms: <br>
                 </p>
             </div>
+
+            <div class="column next">
+                <h2>Main Content 3</h2>
+                <div id="hotelResults"> <!-- Search results populate here --> </div>
+                <button type="button" onclick="bookStays()">Book</button>
+            </div>
         </div>
     </div>
 
@@ -87,7 +98,8 @@
         </div>
     </div>
 
-    </body>
+    <script>
+        document.getElementById("staysform").addEventListener("submit", staySubmitHandler);
+    </script>
+</body>
 </html>
-
-
