Add bookCar (it is not completed)

--- a/Assignment2/cars.html
+++ b/Assignment2/cars.html
@@ -74,7 +74,7 @@
                 <div id="carResults"> <!-- Search results populate here --> </div>
                 <h2>Suggest Cars</h2>
                 <div id="suggestCars"> <!-- Suggest results populate here --> </div>
-                <button type="button">Book</button>
+                <button type="button" onclick="bookCar()">Book</button>
             </div>
         </div>
     </div>
