--- a/Assignment2/contact-us.html
+++ b/Assignment2/contact-us.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Contact-Us</title>
-        <link rel="stylesheet" type="text/css" href="mystyle.css">
-        <script type="text/JavaScript" src="travel.js"></script>
+        <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
+        <script type="text/javascript" src="assets/js/travel.js"></script>
     </head>
     <body id="contact-us">
         <div class="header">
@@ -44,7 +44,7 @@
         </div>
         <div class="column middle">
             <h2>Contact Form</h2>
-            <form>
+            <form id="contact-usForm">
                 First name:<br>
                 <input id="firstname" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="firstname"><br>
                 Last name:<br>
