--- a/Assignment2/stays.html
+++ b/Assignment2/stays.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Stays</title>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
-    <script src="jquery-3.7.1.js"></script>
-    <script src="travel.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
+    <script type="text/javascript" src="assets/js/travel.js"></script>
+    <script src="assets/js/jquery-3.7.1.js"></script>
+    
 </head>
 <body id="stays">
     <div class="header">
