Add register page

--- a/Assignment2/contact-us.html
+++ b/Assignment2/contact-us.html
@@ -13,6 +13,7 @@
     <div class="row">
         <div class="topnav">
             <a href="home.html">Home</a>
+            <a href="register.html">Register</a>
             <a href="stays.html">Stays</a>
             <a href="flights.html">Flights</a>
             <a href="cars.html">Cars</a>
@@ -49,7 +50,7 @@
                 <input id="firstname" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="firstname"><br>
                 Last name:<br>
                 <input id="lastname" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="lastname"><br>
-                Phone:<br>
+                Phone Number:<br>
                 <input id="phone" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="phone"><br>
                 Gender:<br>
                 <input type="radio" name="gender" value="male">
