--- a/Assignment2/cart.html
+++ b/Assignment2/cart.html
@@ -15,6 +15,7 @@
     <div class="row">
         <div class="topnav">
             <a href="home.html">Home</a>
+            <a href="register.html">Register</a>
             <a href="stays.html">Stays</a>
             <a href="flights.html">Flights</a>
             <a href="cars.html">Cars</a>
