Added default account page; adjusted nav menu and page headers

--- a/Assignment2/flights.html
+++ b/Assignment2/flights.html
@@ -7,13 +7,15 @@
     </head>
     <body id="flights">
         <div class="header">
-        <h1>Flights</h1>
-    </div>
+            <h1 style="display:inline">Flights</h1>
+        <h1 id="namedrop" style="display:inline"></h1>
+        </div>
 
     <div class="row">
         <div class="topnav">
             <a href="home.html">Home</a>
             <a href="register.html">Register</a>
+            <a href="account.html">Account</a>
             <a href="stays.html">Stays</a>
             <a href="flights.html">Flights</a>
             <a href="cars.html">Cars</a>
