--- a/Assignment2/account.html
+++ b/Assignment2/account.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Cars</title>
+        <title>Account</title>
         <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
         <script type="text/javascript" src="assets/js/travel.js"></script>
+        <script type="text/javascript" src="assets/js/helper.js"></script>
     </head>
-    <body id="cars">
+    <body id="account">
         <div class="header">
-        <h1 style="display:inline">Cars</h1>
+        <h1 style="display:inline">Account</h1>
         <h1 id="namedrop" style="display:inline"></h1>
     </div>
 
     <div class="row">
         <div class="topnav">
             <a href="home.html">Home</a>
-            <a href="register.html">Register</a>
             <a href="account.html">Account</a>
+            <a href="register.html">Register</a>
             <a href="stays.html">Stays</a>
             <a href="flights.html">Flights</a>
             <a href="cars.html">Cars</a>
@@ -45,40 +46,10 @@
             </select>
             <br>
         </div>
-
         <div class="column middle">
-            <div class="column next">
-                    <h2>Search for Cars</h2>
-                <form>
-                    City:<br>
-                    <input id="city" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="city" style="width: 200px;"><br><br>
-                    Type of Car:<br>
-                    <input id="carType" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="carType" style="width: 200px;"><br><br>
-                    Check in Date:<br>
-                    <input id="checkIn" type="date" onfocus="myFocus(this)" onblur="myBlur(this)" name="checkIn" min="2024-09-01" max="2024-12-01" required><br><br>
-                    Check out Date:<br>
-                    <input id="checkOut" type="date" onfocus="myFocus(this)" onblur="myBlur(this)" name="checkOut" min="2024-09-01" max="2024-12-01" required><br><br>
-                    <button type="button" onclick="validateInfoCars()">Search</button>
-                </form>
-            </div>
-
-            <div class="column next">
-                <h2>Car Information</h2>
-                <p id="carInfo">
-                    City Name: <br>
-                    Car Type: <br>
-                    Check-In Date: <br>
-                    Check-Out Date: <br>
-                </p>
-            </div>
-            
-            <div class="column next">
-                <h2>Cars Results</h2>
-                <div id="carResults"> <!-- Search results populate here --> </div>
-                <h2>Suggest Cars</h2>
-                <div id="suggestCars"> <!-- Suggest results populate here --> </div>
-                <button type="button" onclick="bookCar()">Book</button>
-            </div>
+            <h2>Main content</h2>
+            <h3>Current Date/Time: </h3>
+            <p id="datetimenow"></p>
         </div>
     </div>
 
