--- a/Assignment2/cruises.html
+++ b/Assignment2/cruises.html
@@ -8,13 +8,15 @@
     </head>
     <body id="cruises">
         <div class="header">
-        <h1>Cruises</h1>
+        <h1 style="display:inline">Cruises</h1>
+        <h1 id="namedrop" style="display:inline"></h1>
     </div>
 
     <div class="row">
         <div class="topnav">
             <a href="home.html">Home</a>
             <a href="register.html">Register</a>
+            <a href="account.html">Account</a>
             <a href="stays.html">Stays</a>
             <a href="flights.html">Flights</a>
             <a href="cars.html">Cars</a>
