--- a/Assignment2/register.html
+++ b/Assignment2/register.html
@@ -15,6 +15,7 @@
         <div class="topnav">
             <a href="home.html">Home</a>
             <a href="register.html">Register</a>
+            <a href="login.html">Login</a>
             <a href="account.html">Account</a>
             <a href="stays.html">Stays</a>
             <a href="flights.html">Flights</a>
@@ -59,30 +60,30 @@
                     <p id="loginValid"></p>
                 </div>
                 <div style="flex: 1;">
-                    <h2>Register Form</h2>
-            <form id="registerForm">
-                First name:<br>
-                <input id="firstname" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="firstname" required><br><br>
-                Last name:<br>
-                <input id="lastname" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="lastname" required><br><br>
-                Date of Birth:<br>
-                <input id="dob" type="date" onfocus="myFocus(this)" onblur="myBlur(this)" name="dob" required><br><br>
-                Gender:<br>
-                <input type="radio" name="gender" value="male">
-                <label >Male</label>
-                <input type="radio" name="gender" value="female">
-                <label >Female</label><br><br>
-                Phone Number:<br>
-                <input id="phone" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="phone" required><br><br>
-                Email:<br>
-                <input id="email" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="email" required><br><br>
-                Password:<br>
-                <input id="password" type="password" onfocus="myFocus(this)" onblur="myBlur(this)" name="password" required><br><br>
-                Re-Enter Password:<br>
-                <input id="rePassword" type="password" onfocus="myFocus(this)" onblur="myBlur(this)" name="rePassword" required><br><br>
-                <button type="button" onclick="validateRegisterForm()">Submit</button>
-            </form>
-            <p id="registerValid"></p>
+                <h2>Register Form</h2>
+                <form method="post" action="login_register.php" id="registerForm">
+                    First name:<br>
+                    <input id="firstname" type="text" name="firstname" required><br><br>
+                    Last name:<br>
+                    <input id="lastname" type="text" name="lastname" required><br><br>
+                    Date of Birth:<br>
+                    <input id="dob" type="date" name="dob" required><br><br>
+                    Gender:<br>
+                    <input type="radio" name="gender" value="male">
+                    <label >Male</label>
+                    <input type="radio" name="gender" value="female">
+                    <label >Female</label><br><br>
+                    Phone Number:<br>
+                    <input id="phone" type="text" name="phone" required><br><br>
+                    Email:<br>
+                    <input id="email" type="text" name="email" required><br><br>
+                    Password:<br>
+                    <input id="password" type="password" name="password" required><br><br>
+                    Re-Enter Password:<br>
+                    <input id="rePassword" type="password" name="rePassword" required><br><br>
+                    <button type="submit" name="register">Register</button>
+                </form>
+                <p style="color: red;"><?php echo $register_message; ?></p>
                 </div>
             </div>
         </div>
