Edit navigation links

--- a/Assignment2/account.html
+++ b/Assignment2/account.html
@@ -15,8 +15,9 @@
     <div class="row">
         <div class="topnav">
             <a href="home.html">Home</a>
-            <a href="account.html">Account</a>
             <a href="register.html">Register</a>
+            <a href="login.html">Login</a>
+            <a href="account.html">Account</a>
             <a href="stays.html">Stays</a>
             <a href="flights.html">Flights</a>
             <a href="cars.html">Cars</a>
