--- a/Assignment2/cruises.html
+++ b/Assignment2/cruises.html
@@ -15,8 +15,8 @@
     <div class="row">
         <div class="topnav">
             <a href="home.html">Home</a>
-            <a href="login_register.php">Register</a>
             <a href="register.html">Register</a>
+            <a href="login.html">Login</a>
             <a href="account.html">Account</a>
             <a href="stays.html">Stays</a>
             <a href="flights.html">Flights</a>
