Edit login and register

--- a/Assignment2/login.html
+++ b/Assignment2/login.html
@@ -48,7 +48,7 @@
         </div>
         <div class="column middle">
             <h2>Login</h2>
-            <form method="post" action="login_register.php" onsubmit="return validateLoginForm();">
+            <form method="post" action="login.php" onsubmit="return validateLoginForm();">
                 <input type="hidden" name="action" value="login">
                 Phone Number:<br>
                 <input type="text" name="phone" id="login_phone" onfocus="myFocus(this)" onblur="myBlur(this)" required placeholder="ddd-ddd-dddd"><br><br>
