--- a/Assignment2/home.html
+++ b/Assignment2/home.html
@@ -16,13 +16,13 @@
             <a href="home.html">Home</a>
             <a href="register.html">Register</a>
             <a href="login.html">Login</a>
-            <a href="account.html">Account</a>
-            <a href="stays.html">Stays</a>
-            <a href="flights.html">Flights</a>
-            <a href="cars.html">Cars</a>
-            <a href="cruises.html">Cruises</a>
-            <a href="contact-us.html">Contact us</a>
-            <a href="cart.html">Cart</a>
+            <a id="account" href="account.html">Account</a>
+            <a id="stays" href="stays.html">Stays</a>
+            <a id="flights" href="flights.html">Flights</a>
+            <a id="cars" href="cars.html">Cars</a>
+            <a id="cruises" href="cruises.html">Cruises</a>
+            <a id="contact-us" href="contact-us.html">Contact us</a>
+            <a id="cart" href="cart.html">Cart</a>
         </div>
     </div>
 
